After Session 5 - Directives, Pipes, Decorators

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,6 +20,8 @@
         <li routerLinkActive="active"><a routerLink="/messages">Message</a></li>
         <li routerLinkActive="active"><a routerLink="/users">Users</a></li>
         <li routerLinkActive="active"><a routerLink="/parent">Parent</a></li>
+        <li routerLinkActive="active"><a routerLink="/bd">Built in Directives</a></li>
+        <li routerLinkActive="active"><a routerLink="/cd">Custom Directives</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
