--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,6 +22,8 @@
         <li routerLinkActive="active"><a routerLink="/parent">Parent</a></li>
         <li routerLinkActive="active"><a routerLink="/bd">Built in Directives</a></li>
         <li routerLinkActive="active"><a routerLink="/cd">Custom Directives</a></li>
+        <li routerLinkActive="active"><a routerLink="/new-user">New User Form</a></li>
+        <li routerLinkActive="active"><a routerLink="/new-user-reactive">New User Reactive Form</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
